--- a/translations/vi.json
+++ b/translations/vi.json
@@ -1,12 +1,13 @@
 {
-    "SYS": {
-        "LABEL": {
-            "WELCOME": "Chào mừng"
-        },
-        "MESSAGE": {
-            "DESCRIPTION": "Đây là phiên bản demo"
-        }
-    },
-    "SYS.LABEL.WELCOME": "Chào mừng",
-    "SYS.MESSAGE.DESCRIPTION": "Đây là phiên bản demo"
+	"SYS": {
+		"LABEL": {
+			"WELCOME": "Chào mừng"
+		},
+		"MESSAGE": {
+			"DESCRIPTION": "Đây là phiên bản demo"
+		}
+	},
+	"SYS.LABEL.WELCOME": "Chào mừng",
+	"SYS.MESSAGE.DESCRIPTION": "Đây là phiên bản demo",
+	"vora": "Voras Vi %s -> %s:"
 }
