--- a/translations/vi.json
+++ b/translations/vi.json
@@ -9,5 +9,5 @@
 	},
 	"SYS.LABEL.WELCOME": "Chào mừng",
 	"SYS.MESSAGE.DESCRIPTION": "Đây là phiên bản demo",
-	"vora": "Voras Vi %s -> %s:"
+	"vora": "Voras ok Vi %s -> %s:"
 }
